--- a/src/web-template/css/main.css
+++ b/src/web-template/css/main.css
@@ -28,6 +28,12 @@ body {
   left: 0; top: 0; width: 100%; height: 100%;
 }
 
+.frampton-text {
+  position: fixed;
+  display: block;
+  left: 0; top: 0;
+}
+
 .not-chrome-message {
   position: absolute;
   left: 50%; margin-left: -200px; width: 400px;
